ocp4-test-app-and-persistentvolumeclaim/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "test-ocp4-new-workers"
  labels:
    name: "test-ocp4-new-workers"
