ocp4-test-app-and-persistentvolumeclaim/05-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-ns
  #namespace: test-ocp4-new-workers
  namespace: nfs-server-provisioner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: label-nfs-server-provisioner
  template:
    metadata:
      labels:
        app: label-nfs-server-provisioner
    spec:
      volumes:
      - name: nfs-test
        persistentVolumeClaim:
          claimName: nfs-pvc
      containers:
      - name: nginx 
        image: bitnami/nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nfs-test 
          mountPath: /app
          
      - name: nginx 
        image: nginx:alpine 
        command: [ "sh", "-c"]
        args:
        - while true; do
            echo -en '\n';
            printenv MY_NODE_NAME MY_POD_NAME MY_POD_NAMESPACE;
            printenv MY_POD_IP MY_POD_SERVICE_ACCOUNT;
            sleep 10;
          done;
