ocp4-test-app-and-persistentvolumeclaim/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
    app: label-nfs-server-provisioner
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: label-nfs-server-provisioner
